Added administration pages to config energy company